# feruca

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: conformance.yml
benches/: conformance.rs
src/: allkeys_cldr_bincode  ascii.rs  cea.rs  cea_match.rs  cea_source.rs  cea_utils.rs  collator.rs  consts.rs  first_weight.rs  lib.rs  normalize.rs  prefix.rs  sort_key.rs  tables.rs  tailor.rs  types.rs  weights.rs
src/bincode/: allkeys_14  decomp  fcd  jamo  low  low_cldr  multis  multis_cldr  singles  singles_cldr  variable
src/bincode/tailoring/: arabic_interleaved_multi  arabic_interleaved_sing  arabic_script_multi  arabic_script_sing
src/data/: cldr_root  decomp  ducet  fcd  variable
src/data/tailoring/: arabic_interleaved  arabic_script
tests/: conformance.rs  input_types.rs  misc.rs
