[package]
name = "feruca"
version = "0.11.1"
edition = "2024"
license = "MIT"
authors = ["Theo Beers <theo.beers@fu-berlin.de>"]
repository = "https://github.com/theodore-s-beers/feruca"
description = "An implementation of the Unicode Collation Algorithm"
keywords = ["Unicode", "collation", "sorting"]
categories = ["algorithms", "internationalization", "text-processing"]
exclude = ["/test-data/"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bstr = "1.12.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
unicode-canonical-combining-class = "1.0.0"

[dev-dependencies]
criterion = "0.6.0"

[profile.bench]
lto = true

[[bench]]
name = "conformance"
harness = false
